feat: query descendant/anormal/delta  count
